# woodcut-ai

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml
benchmark/: __init__.py  contact_sheet.py  matrix.py  run.py
tests/: test_stylize_adapters.py
woodcut/: __init__.py  _claude.py  analysis.py  config.py  judge.py  laser.py  models.py  pipeline.py  prompts.py  separate.py  sheet.py  smoke.py  vectorize.py
woodcut/stylize/: __init__.py  base.py  fal_adapter.py  replicate_adapter.py  stub.py
